more z-index to fix add event by click on cell

--- a/task_3.9(final-proj__web-calendar)/src/widgets/Calnedar/ui/calendar.module.scss
+++ b/task_3.9(final-proj__web-calendar)/src/widgets/Calnedar/ui/calendar.module.scss
@@ -77,6 +77,7 @@
 	height: 60px;
 	border: 1px solid var(--border);
 	position: relative;
+	z-index: 201;
 	cursor: crosshair;
 	&::before {
 		position: absolute;
